tests/data/oidc-native/scenarios/ingress/test-15-wrong-key.yaml
# Test 15: Client secret has correct type but wrong data key (uses 'secret'
# instead of 'client-secret').
#
# Verify:
#   - Ingress returns 500.
apiVersion: v1
kind: Secret
metadata:
  name: test21-wrong-key
type: nginx.org/oidc
data:
  secret: c29tZS1zZWNyZXQ=
---
apiVersion: k8s.nginx.org/v1
kind: Policy
metadata:
  name: test21-policy
spec:
  oidcNative:
    issuer: https://keycloak.example.com/realms/master
    clientID: nginx-plus
    clientSecret: test21-wrong-key
    sslVerify: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  annotations:
    nginx.com/policies: "test21-policy"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webapp.example.com
      secretName: tls-secret
  rules:
    - host: webapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-svc
                port:
                  number: 80
